--- a/frontend-reactjs/src/pages/SignIn/SignIn.module.css
+++ b/frontend-reactjs/src/pages/SignIn/SignIn.module.css
@@ -1,5 +1,5 @@
 .surrounding {
-  background-color: #eeeeee;
+  background-color: rgb(229, 239, 250);
   margin: 0;
   padding: 0;
 }
@@ -31,6 +31,7 @@
   background-color: #fff;
   padding-top: 1px;
 
+  border-radius: 10px;
   box-shadow: 0 8px 8px 0 rgba(227, 235, 240, 0.712),
     0 10px 10px 0 rgba(227, 235, 240, 0.712);
 }
